--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My bonsai</title>
   </head>
   <body>
+    <div id="DEBUG"></div>
     <script src="main.js"></script>
   </body>
 </html>
