--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <!-- <div id="DEBUG"></div> -->
-    <script src="main.js"></script>
+    <script src="src/main.ts"></script>
   </body>
 </html>
