--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My bonsai</title>
   </head>
   <body>
-    <!-- <div id="DEBUG"></div> -->
-    <script src="src/main.ts"></script>
+    <div id="DEBUG"></div>
+    <script src="src/main.ts" type="module"></script>
   </body>
 </html>
